[package]
name = "keyfn"
version = "0.2.1"
description = "call function on keypress/release"
readme = "./README.md"
homepage = "https://github.com/einzigartigername/keyfn"
repository = "https://github.com/einzigartigername/keyfn"
authors = ["einzigartigerName"]
keywords = ["xlib", "keybinding"]
license = "MIT"
edition = "2018"

[lib]
name = "keyfn"
path = "./src/lib.rs"

[dependencies]
fnv = "1.0.3"

[dependencies.x11]
features = ["xlib"]
version = "2.18.2"